fixed overflow

--- a/resources/home.css
+++ b/resources/home.css
@@ -50,10 +50,12 @@
   .slideshow .button-wrapper.toggle {
     opacity: 1; }
   .slideshow .img-size {
+    overflow: hidden;
     /*width: 100%;*/
     height: 100%;
     opacity: 0; }
   .slideshow .image-wrapper {
+    overflow: hidden;
     display: flex;
     position: absolute;
     justify-content: center;
@@ -61,6 +63,7 @@
     width: 100%;
     height: 100%; }
     .slideshow .image-wrapper img {
+      overflow: hidden;
       position: absolute;
       /*width: 100vw;*/
       max-height: 100%;
